<resources>
    <string name="app_name">Partaner</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">Create Account</string>
    <string name="password">Enter Password...</string>
    <string name="email">Email...</string>
    <string name="retype_password">Retype Password..</string>
    <string name="new_password">Password..</string>
    <string name="user_email">Email...</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_instead">Login Instead</string>
</resources>
