<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <EditText
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/button_outline"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/etEmail"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_outline"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_outline"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_outline2"
        android:padding="10dp"
        android:text="@string/create_account"
        android:textColor="#000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"/>

    <Button
    android:id="@+id/btnLogin"
        android:onClick="loginme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/button_outline"
    android:padding="10dp"
    android:text="@string/login_instead"
    android:textColor="#000" />


</LinearLayout>
